[tool.poetry]
name = "py16web-hw05"
version = "0.1.0"
description = ""
authors = ["djmary-k <kondratyukmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
